Criação da branch da semana 2 do desafio

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
 @import url(./styles/rodape.css);
 @import url(./styles/experiencia.css);
 @import url(./styles/mapa-setores.css);
+@import url(./styles/formulario.css);
+@import url(./styles/faq.css);
+@import url(./styles/ingresso.css);
+
 
 
 :root {
